# kvm_control_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  agent.md  build.bat  config.yaml  development.md  ffmpeg_search.json  imgui_search.json  sdl3_search.json  start_stream.bat  vcpkg.json
cmake/: FindMbedTLS.cmake  mbedtls_user_config.h
docs/: CODE-Rules.md  HID-architect.md  VIDEO-architect.md  development-status.md  remarks.md  start_ffmpeg.sh  web-connect.md
include/: KVMVideoCodec.h
include/common/: InputEvents.hpp
include/control/: IEventMapper.hpp  IHIDClient.hpp  IInputCapturer.hpp
include/core/: AppBuilder.hpp  AppConfig.hpp  CommandLineParser.hpp  KVMApplication.hpp
include/network/: HttpClient.hpp  IHttpClient.hpp  ILauncherClient.hpp  INetworkReceiver.hpp  WinHttpClient.hpp
include/ui/: OverlayGUI.hpp
include/video/: FFmpegStreamNode.hpp  IHardwareDecoder.hpp  IStreamNode.hpp  IVideoDecoder.hpp  RtpDepacketizer.hpp  SDLVideoDecoder.hpp  WebRTCStreamNode.hpp
src/: KVMVideoCodec.cpp  main.cpp
src/control/: EventMapper.cpp  SDLInputCapturer.cpp  StubHIDClient.cpp  WebSocketHIDClient.cpp
src/core/: AppConfig.cpp  KVMApplication.cpp
src/network/: HttpClient.cpp  UDPReceiver.cpp  WinHttpClient.cpp  WinNamedPipeClient.cpp
src/ui/: OverlayGUI.cpp
src/video/: FFmpegStreamNode.cpp  HardwareDecoder.cpp  RtpDepacketizer.cpp  SDLVideoDecoder.cpp  WebRTCStreamNode.cpp
